<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:id="@+id/main_activity_view"
    >

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="246dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <SeekBar
        android:id="@+id/intensityBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:max="2"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <ImageView
        android:id="@+id/walkingPNG"
        android:layout_width="62dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/intensityBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <ImageView
        android:id="@+id/runningPNG"
        android:layout_width="62dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/intensityBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="362dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intensityBar"
        app:layout_constraintVertical_bias="0.063">

        <EditText
            android:id="@+id/userInputMinutes"
            android:layout_width="227dp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:hint="@string/input_minutes_hint"
            android:inputType="phone"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="359dp" />

        <Button
            android:id="@+id/dataInsertButton"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:enabled="false"
            android:text="@string/insertButtonText"
            tools:layout_editor_absoluteX="289dp"
            tools:layout_editor_absoluteY="343dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="362dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598">

        <EditText
            android:id="@+id/autoRunMinutes"
            android:layout_width="227dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/auto_run_minutes"
            android:inputType="number"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="453dp" />

        <Switch
            android:id="@+id/autoRunSwitch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:text="@string/auto_running"
            tools:layout_editor_absoluteX="259dp"
            tools:layout_editor_absoluteY="460dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="105dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799">

        <Switch
            android:id="@+id/OverlaySwitch"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:enabled="false"
            android:text="@string/overlay_switch"

            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="602dp" />

        <Switch
            android:id="@+id/NotificationToggle"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/show_notifications" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>